Add button for finding exit station

--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
     <!-- SWIPE -->
     <section id="tab-swipe" class="tab active">
       <div class="card-container" id="card-container"></div>
-
+      
+<button class="btn-secondary big" onclick="findByExitStation()">
+  📍 Quem desce comigo nesta estação?
+</button> 
+      
       <div class="buttons">
         <button class="btn-circle" onclick="dislike()">❌</button>
         <button class="btn-circle" onclick="like()">❤️</button>
