--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
   <section id="login-screen" class="screen">
     <div class="login-box">
       <h2>Seu perfil</h2>
+      <h3>🔥 Estações mais movimentadas</h3>
+<div id="heatmap-box"></div>
 
       <div class="form-group">
         <label>Nome</label>
