--- a/index.html
+++ b/index.html
@@ -181,5 +181,40 @@
       });
     }
   </script>
+  <div id="map" style="width:100%;height:100vh;"></div>
+
+<script>
+let map, marker;
+
+function initMap() {
+  // Posição inicial (São Paulo - centro)
+  const inicial = { lat: -23.5505, lng: -46.6333 };
+
+  map = new google.maps.Map(document.getElementById("map"), {
+    center: inicial,
+    zoom: 16,
+  });
+
+  marker = new google.maps.Marker({
+    position: inicial,
+    map: map,
+    title: "Você está aqui",
+  });
+
+  // Pega sua localização real
+  if (navigator.geolocation) {
+    navigator.geolocation.watchPosition((position) => {
+      const pos = {
+        lat: position.coords.latitude,
+        lng: position.coords.longitude,
+      };
+
+      marker.setPosition(pos);
+      map.setCenter(pos);
+    });
+  }
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDy0qDXOl3X2tIWPD9RplEG1OZZuvaUGr4&callback=initMap" async defer></script>
 </body>
 </html>
