--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
   <section id="login-screen" class="screen">
     <div class="login-box">
       <h2>Seu perfil</h2>
-  
 
       <div class="form-group">
         <label>Nome</label>
@@ -86,7 +85,6 @@
   <!-- APP PRINCIPAL -->
   <section id="app-screen" class="screen">
 
-    <!-- TOPO -->
     <header class="top-bar">
       <div>
         <h1>NextStop</h1>
@@ -95,7 +93,6 @@
       <div class="top-user" id="top-user"></div>
     </header>
 
-    <!-- TRAJETO / ROTA -->
     <section class="route-panel">
       <h2>Seu trajeto</h2>
       <p class="hint">Escolha a linha, estações e horário em que costuma viajar.</p>
@@ -123,18 +120,17 @@
 
       <button class="btn-secondary" onclick="saveRoute()">Salvar trajeto</button>
       <button class="btn-secondary" onclick="ativarLocalizacao()">Atualizar GPS 📍</button>
-      <button class="btn-secondary" onclick="openRouteInMaps()">Ver no mapa 🗺️</button>
+      <button class="btn-secondary" onclick="abrirMapa()">Ver no mapa 🗺️</button>
 
       <p id="routeStatus" class="status-text"></p>
     </section>
 
-    <!-- SWIPE -->
     <section id="tab-swipe" class="tab active">
       <div class="card-container" id="card-container"></div>
       
-<button class="btn-secondary big" onclick="findByExitStation()">
-  📍 Quem desce comigo nesta estação?
-</button> 
+      <button class="btn-secondary big" onclick="findByExitStation()">
+        📍 Quem desce comigo nesta estação?
+      </button> 
       
       <div class="buttons">
         <button class="btn-circle" onclick="dislike()">❌</button>
@@ -144,7 +140,6 @@
       <div class="matches" id="statusMatch"></div>
     </section>
 
-    <!-- CHAT -->
     <section id="tab-chat" class="tab">
       <div id="chat-list" class="chat-list"></div>
 
@@ -159,21 +154,21 @@
       </section>
     </section>
 
-    <!-- PERFIL -->
     <section id="tab-profile" class="tab">
       <div class="profile-box" id="profile-box"></div>
     </section>
 
-    <!-- NAVBAR -->
     <nav class="navbar">
       <button onclick="showTab('swipe')">🏠</button>
       <button onclick="showTab('chat')">💬</button>
       <button onclick="showTab('profile')">👤</button>
       <button onclick="logout()">🚪</button>
     </nav>
+
   </section>
 
   <script src="app.js"></script>
+
   <script>
     if ("serviceWorker" in navigator) {
       window.addEventListener("load", () => {
@@ -181,40 +176,58 @@
       });
     }
   </script>
-  <div id="map" style="width:100%;height:100vh;"></div>
 
-<script>
-let map, marker;
+  <!-- MAPA -->
+  <div id="map-container" style="display:none; position:fixed; inset:0; z-index:999;">
+    <button onclick="fecharMapa()" 
+            style="position:absolute; top:10px; right:10px; z-index:1000; padding:10px; background:#ff2f7a; color:white; border:none; border-radius:10px;">
+      ❌ Fechar mapa
+    </button>
+    <div id="map" style="width:100%; height:100%;"></div>
+  </div>
 
-function initMap() {
-  // Posição inicial (São Paulo - centro)
-  const inicial = { lat: -23.5505, lng: -46.6333 };
+  <script>
+    let map, marker;
 
-  map = new google.maps.Map(document.getElementById("map"), {
-    center: inicial,
-    zoom: 16,
-  });
+    function abrirMapa() {
+      document.getElementById("map-container").style.display = "block";
+      if (!map) initMap();
+    }
 
-  marker = new google.maps.Marker({
-    position: inicial,
-    map: map,
-    title: "Você está aqui",
-  });
+    function fecharMapa() {
+      document.getElementById("map-container").style.display = "none";
+    }
 
-  // Pega sua localização real
-  if (navigator.geolocation) {
-    navigator.geolocation.watchPosition((position) => {
-      const pos = {
-        lat: position.coords.latitude,
-        lng: position.coords.longitude,
-      };
+    function initMap() {
+      const inicial = { lat: -23.5505, lng: -46.6333 };
 
-      marker.setPosition(pos);
-      map.setCenter(pos);
-    });
-  }
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDy0qDXOl3X2tIWPD9RplEG1OZZuvaUGr4&callback=initMap" async defer></script>
+      map = new google.maps.Map(document.getElementById("map"), {
+        center: inicial,
+        zoom: 16,
+      });
+
+      marker = new google.maps.Marker({
+        position: inicial,
+        map: map,
+        title: "Você está aqui",
+      });
+
+      if (navigator.geolocation) {
+        navigator.geolocation.watchPosition((position) => {
+          const pos = {
+            lat: position.coords.latitude,
+            lng: position.coords.longitude,
+          };
+
+          marker.setPosition(pos);
+          map.setCenter(pos);
+        });
+      }
+    }
+  </script>
+
+  <!-- COLE SUA NOVA CHAVE AQUI -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDy0qDXOl3X2tIWPD9RplEG1OZZuvaUGr4&callback=initMap" async defer></script>
+
 </body>
 </html>
