--- a/index.html
+++ b/index.html
@@ -184,12 +184,7 @@
     <div id="map" style="width:100%; height:100%;"></div>
   </div>
 
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
-<script src="firebase.js"></script>
-<script src="app.js"></script>
+<script>
   
   <script>
     let map, marker;
