--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
     from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
     const firebaseConfig = {
-      apiKey: "SUA_API_KEY",
-      authDomain: "SEU_PROJETO.firebaseapp.com",
-      projectId: "SEU_PROJETO",
-      storageBucket: "SEU_PROJETO.appspot.com",
-      messagingSenderId: "XXXXXX",
-      appId: "XXXXXX"
+      apiKey: "AIzaSyCEtq-uC5EfUAIseO7dEPL5QEfoZLYaSgU",
+      authDomain: "nextstop-a15ad.firebaseapp.com",
+      projectId: "nextstop-a15ad",
+      storageBucket: "nextstop-a15ad.firebasestorage.app",
+      messagingSenderId: "340141470022",
+      appId: "1:340141470022:web:8de279a702cc25827f7547"
     };
 
     const app = initializeApp(firebaseConfig);
