--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -15,7 +14,7 @@
   <!-- ESTILO -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- GOOGLE MAPS -->
+  <!-- GOOGLE MAPS (use sua chave) -->
   <script src="https://maps.googleapis.com/maps/api/js?key=SUA_GOOGLE_MAPS_KEY"></script>
 </head>
 
@@ -129,7 +128,7 @@
         <div class="form-group">
           <label>Estação de entrada</label>
           <select id="entradaSelect">
-            <option>Escolha uma estação</option>
+            <option>Escolha uma estação</ent1>
           </select>
         </div>
 
@@ -182,87 +181,11 @@
     }
   </script>
 
-  <!-- LÓGICA DO APP + MAPA -->
-  <script>
-    let map, marker;
+  <!-- APP (telas, mapa, etc) -->
+  <script src="app.js"></script>
 
-    function showLogin() {
-      document.getElementById("welcome-screen").classList.remove("active");
-      document.getElementById("login-screen").classList.add("active");
-    }
-
-    function showWelcome() {
-      document.getElementById("login-screen").classList.remove("active");
-      document.getElementById("welcome-screen").classList.add("active");
-    }
-
-    function entrarNoApp(nome) {
-      document.getElementById("welcome-screen").classList.remove("active");
-      document.getElementById("login-screen").classList.remove("active");
-      document.getElementById("app-screen").classList.add("active");
-      document.getElementById("top-user").innerText = nome;
-    }
-
-    function abrirMapa() {
-      document.getElementById("map-container").style.display = "block";
-      if (!map) initMap();
-    }
-
-    function fecharMapa() {
-      document.getElementById("map-container").style.display = "none";
-    }
-
-    function initMap() {
-      const inicial = { lat: -23.5505, lng: -46.6333 };
-
-      map = new google.maps.Map(document.getElementById("map"), {
-        center: inicial,
-        zoom: 15,
-      });
-
-      marker = new google.maps.Marker({
-        position: inicial,
-        map: map,
-        title: "Você está aqui"
-      });
-
-      if (navigator.geolocation) {
-        navigator.geolocation.watchPosition((position) => {
-          const pos = {
-            lat: position.coords.latitude,
-            lng: position.coords.longitude,
-          };
-
-          marker.setPosition(pos);
-          map.setCenter(pos);
-        });
-      }
-    }
-
-    function ativarLocalizacao() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition((pos) => {
-          alert("Localização atual: " + 
-            pos.coords.latitude.toFixed(5) + ", " + 
-            pos.coords.longitude.toFixed(5)
-          );
-        });
-      }
-    }
-
-    function saveRoute() {
-      const linha = document.getElementById("linhaSelect").value;
-      const entrada = document.getElementById("entradaSelect").value;
-      const saida = document.getElementById("saidaSelect").value;
-      const horario = document.getElementById("horario").value;
-
-      document.getElementById("routeStatus").innerText =
-        "Trajeto salvo: " + linha + " | " + entrada + " → " + saida + " às " + horario;
-    }
-  </script>
-
-  <!-- QUANDO CRIAR A PASTA /js, COLE ISSO AQUI 👇 -->
-  <!-- <script type="module" src="./js/firebase.js"></script> -->
+  <!-- FIREBASE (Auth) -->
+  <script type="module" src="firebase.js"></script>
 
 </body>
 </html>
